# chrome-ocr

./: .gitignore  LICENSE  README.md  README_zh.md  chrome_ocr.py  pyproject.toml  requirements-dev.txt  requirements.txt  screen_ai_pdf_parser.py  test_pdf_parser.py
.github/workflows/: test.yml
benchmarks/: README.md  run_benchmark.py
chrome_ocr/: __init__.py  __main__.py  chrome_ocr.py  cli.py
docs/: launch-kit.md
example/: demo.ipynb
tests/: test_chrome_ocr.py  test_cli.py
